--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ sounddevice>=0.4.5
 scipy>=1.7.0
 requests>=2.25.0
 wave>=0.0.2
+# Translation dependencies
+argos-translate>=1.9.0
+transformers>=4.20.0
+torch>=1.12.0
+sentencepiece>=0.1.96
