--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,82 @@
-numpy>=1.21.0
-matplotlib>=3.5.0
-sounddevice>=0.4.5
-scipy>=1.7.0
-requests>=2.25.0
+# TalkBridge Requirements
+# Python 3.8+ compatible dependencies
+
+# Core dependencies
+numpy>=1.21.0,<2.0.0
+matplotlib>=3.5.0,<4.0.0
+scipy>=1.7.0,<2.0.0
+requests>=2.25.0,<3.0.0
+
+# Audio processing
+sounddevice>=0.4.5,<1.0.0
 wave>=0.0.2
-# Translation dependencies
-argos-translate>=1.9.0
-transformers>=4.20.0
-torch>=1.12.0
-sentencepiece>=0.1.96
+librosa>=0.10.0,<1.0.0
+soundfile>=0.12.0,<1.0.0
+pygame>=2.5.0,<3.0.0
+
+# Machine Learning and AI
+torch>=1.12.0,<2.0.0
+torchaudio>=0.12.0,<1.0.0
+transformers>=4.20.0,<5.0.0
+sentencepiece>=0.1.96,<1.0.0
+
+# Text-to-Speech (TTS)
+TTS>=0.22.0,<1.0.0
+
+# Translation
+argos-translate>=1.9.0,<2.0.0
+
+# Computer Vision and Animation
+mediapipe>=0.10.0,<1.0.0
+opencv-python>=4.8.0,<5.0.0
+pillow>=9.0.0,<11.0.0
+
+# Web Interface
+streamlit>=1.28.0,<2.0.0
+streamlit-webrtc>=0.47.0,<1.0.0
+plotly>=5.0.0,<6.0.0
+
+# Security and Authentication
+cryptography>=3.4.0,<4.0.0
+bcrypt>=4.0.0,<5.0.0
+passlib>=1.7.0,<2.0.0
+
+# Data handling and serialization
+pandas>=1.3.0,<2.0.0
+pyyaml>=6.0,<7.0
+jsonschema>=4.0.0,<5.0.0
+
+# Logging and monitoring
+structlog>=22.0.0,<23.0.0
+colorlog>=6.7.0,<7.0.0
+
+# Development and testing
+pytest>=7.0.0,<8.0.0
+pytest-cov>=4.0.0,<5.0.0
+black>=22.0.0,<24.0.0
+isort>=5.10.0,<6.0.0
+flake8>=5.0.0,<7.0.0
+mypy>=1.0.0,<2.0.0
+
+# Utilities
+python-dotenv>=0.19.0,<1.0.0
+click>=8.0.0,<9.0.0
+rich>=12.0.0,<14.0.0
+tqdm>=4.64.0,<5.0.0
+
+# Optional: Ollama integration (if available)
+# ollama>=0.1.0
+
+# Optional: Additional audio processing
+# pydub>=0.25.0,<1.0.0
+# webrtcvad>=2.0.0,<3.0.0
+
+# Optional: Additional ML libraries
+# scikit-learn>=1.0.0,<2.0.0
+# tensorflow>=2.8.0,<3.0.0
+
+# Platform-specific dependencies
+# These may need to be installed separately based on your OS
+# Windows: Microsoft Visual C++ Build Tools
+# macOS: Xcode Command Line Tools
+# Linux: build-essential, libasound2-dev
