--- a/requirements.txt
+++ b/requirements.txt
@@ -23,8 +23,8 @@ torchaudio>=0.12.0,<1.0.0
 transformers>=4.20.0,<5.0.0
 sentencepiece>=0.1.96,<1.0.0
 
-# Text-to-Speech (TTS)
-TTS>=0.22.0,<1.0.0
+# Text-to-Speech (TTS) - Using specific version to avoid conflicts
+TTS==0.14.3
 
 # Translation
 argos-translate>=1.9.0,<2.0.0
