--- a/requirements-docker.txt
+++ b/requirements-docker.txt
@@ -1,68 +1,70 @@
 # TalkBridge Docker Requirements
-# More flexible version constraints for Docker environments
+# Simplified version to avoid dependency conflicts
 
 # Core dependencies
-numpy>=1.21.0
-matplotlib>=3.5.0
-scipy>=1.7.0
-requests>=2.25.0
+numpy==1.21.6
+matplotlib==3.5.3
+scipy==1.7.3
+requests==2.28.2
 
 # Audio processing
-sounddevice>=0.4.5
-wave>=0.0.2
-librosa>=0.10.0
-soundfile>=0.12.0
-pygame>=2.5.0
+sounddevice==0.4.6
+wave==0.0.2
+librosa==0.10.1
+soundfile==0.12.1
+pygame==2.5.2
 
 # Speech-to-Text (STT)
-openai-whisper>=20231117
+openai-whisper==20231117
 
-# Machine Learning and AI
-torch>=1.12.0
-torchaudio>=0.12.0
-transformers>=4.20.0
-sentencepiece>=0.1.96
+# Machine Learning and AI - Using compatible versions
+torch==1.13.1
+torchaudio==0.13.1
+transformers==4.21.3
+sentencepiece==0.1.99
 
-# Text-to-Speech (TTS) - More flexible version
-TTS>=0.13.0
+# Text-to-Speech (TTS) - Using compatible version
+TTS==0.13.3
 
-# Translation
-argos-translate>=1.9.0
+# Translation (argos-translate not available for Python 3.8)
+# Using alternative translation libraries
+googletrans==4.0.0rc1
+translate==3.6.1
 
 # Computer Vision and Animation
-mediapipe>=0.10.0
-opencv-python>=4.8.0
-pillow>=9.0.0
+mediapipe==0.10.3
+opencv-python==4.8.0.76
+pillow==9.5.0
 
 # Web Interface
-streamlit>=1.28.0
-streamlit-webrtc>=0.47.0
-plotly>=5.0.0
+streamlit==1.28.1
+streamlit-webrtc==0.47.1
+plotly==5.15.0
 
 # Security and Authentication
-cryptography>=3.4.0
-bcrypt>=4.0.0
-passlib>=1.7.0
+cryptography==3.4.8
+bcrypt==4.0.1
+passlib==1.7.4
 
 # Data handling and serialization
-pandas>=1.3.0
-pyyaml>=6.0
-jsonschema>=4.0.0
+pandas==1.5.3
+pyyaml==6.0.1
+jsonschema==4.17.3
 
 # Logging and monitoring
-structlog>=22.0.0
-colorlog>=6.7.0
+structlog==22.3.0
+colorlog==6.7.0
 
 # Development and testing
-pytest>=7.0.0
-pytest-cov>=4.0.0
-black>=22.0.0
-isort>=5.10.0
-flake8>=5.0.0
-mypy>=1.0.0
+pytest==7.3.1
+pytest-cov==4.1.0
+black==23.3.0
+isort==5.12.0
+flake8==6.0.0
+mypy==1.3.0
 
 # Utilities
-python-dotenv>=0.19.0
-click>=8.0.0
-rich>=12.0.0
-tqdm>=4.64.0 
+python-dotenv==1.0.0
+click==8.1.3
+rich==13.3.5
+tqdm==4.65.0 
