--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,9 @@ sentencepiece>=0.1.96,<1.0.0
 TTS==0.14.3
 
 # Translation
-argos-translate>=1.9.0,<2.0.0
+# argos-translate>=1.9.0,<2.0.0  # Not available for Python 3.8
+googletrans>=4.0.0rc1
+translate>=3.6.0
 
 # Computer Vision and Animation
 mediapipe>=0.10.0,<1.0.0
