Update Dockerfile and config.yaml for dependency and model name adjustments
- Updated mediapipe version from 0.10.3 to 0.10.11 in the Dockerfile for improved compatibility.
- Changed the model name in config.yaml for the whisper configuration to "DeepSeek R1 0528 Qwen3 8B" for clarity and accuracy.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -12,7 +12,7 @@ ollama:
   model: "deepseek-r1:latest"
 
 whisper:
-  model_name: "base"
+  model_name: "DeepSeek R1 0528 Qwen3 8B"
 
 audio:
   sample_rate: 16000
