Enhance Docker configuration and update STT API integration
- Added an image name for the talkbridge service in docker-compose.yml for clarity.
- Enabled the redis_data volume in docker-compose.yml for Redis usage.
- Updated stt_api.py to dynamically import the STT module, logging a warning if the module is unavailable, improving error handling and flexibility.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   talkbridge:
     build: .
+    image: talkbridge-app
     container_name: talkbridge-app
     ports:
       - "8501:8501"
@@ -67,7 +68,7 @@ networks:
     driver: bridge
 
 volumes:
-  # redis_data:  # Uncomment if using Redis
+  redis_data:
 
 # Usage:
 # docker-compose up -d
