--- a/requirements-minimal.txt
+++ b/requirements-minimal.txt
@@ -1,19 +1,69 @@
 # TalkBridge Minimal Requirements
-# Only essential packages for basic functionality
+# Compatible versions for Python 3.8+
 
 # Core dependencies
-numpy==1.21.6
-requests==2.28.2
+numpy>=1.21.0
+matplotlib>=3.5.0
+scipy>=1.7.0
+requests>=2.25.0
+
+# Audio processing
+sounddevice>=0.4.5
+wave>=0.0.2
+librosa>=0.10.0
+soundfile>=0.12.0
+pygame>=2.5.0
+
+# Speech-to-Text (STT)
+openai-whisper>=20231117
+
+# Machine Learning and AI (optional)
+# torch>=1.12.0
+# torchaudio>=0.12.0
+# transformers>=4.20.0
+# sentencepiece>=0.1.96
+
+# Text-to-Speech (TTS) - Using available version
+TTS>=0.15.0
+
+# Translation - Using compatible alternatives
+googletrans>=4.0.0rc1
+translate>=3.6.0
+
+# Computer Vision and Animation (optional)
+# mediapipe>=0.10.0
+# opencv-python>=4.8.0
+pillow>=9.0.0
 
 # Web Interface
-streamlit==1.28.1
+streamlit>=1.28.0
+streamlit-webrtc>=0.47.0
+plotly>=5.0.0
 
-# Basic utilities
-python-dotenv==1.0.0
-click==8.1.3
-rich==13.3.5
-tqdm==4.65.0
+# Security and Authentication
+cryptography>=3.4.0
+bcrypt>=4.0.0
+passlib>=1.7.0
 
-# Data handling
-pandas==1.5.3
-pyyaml==6.0.1 
+# Data handling and serialization
+pandas>=1.3.0
+pyyaml>=6.0
+jsonschema>=4.0.0
+
+# Logging and monitoring
+structlog>=22.0.0
+colorlog>=6.7.0
+
+# Development and testing
+pytest>=7.0.0
+pytest-cov>=4.0.0
+black>=22.0.0
+isort>=5.10.0
+flake8>=5.0.0
+mypy>=1.0.0
+
+# Utilities
+python-dotenv>=0.19.0
+click>=8.0.0
+rich>=12.0.0
+tqdm>=4.64.0 
