--- a/requirements.txt
+++ b/requirements.txt
@@ -23,11 +23,11 @@ torchaudio>=0.12.0,<1.0.0
 transformers>=4.20.0,<5.0.0
 sentencepiece>=0.1.96,<1.0.0
 
-# Text-to-Speech (TTS) - Using specific version to avoid conflicts
-TTS==0.14.3
+# Text-to-Speech (TTS) - Updated to latest stable version
+TTS>=0.22.0
 
-# Translation
-# argos-translate>=1.9.0,<2.0.0  # Not available for Python 3.8
+# Translation - Fixed argos-translate for Python 3.8
+argos-translate>=1.9.0
 googletrans>=4.0.0rc1
 translate>=3.6.0
 
