--- a/requirements-desktop.txt
+++ b/requirements-desktop.txt
@@ -1,202 +1,223 @@
-# TalkBridge Desktop Requirements
-# ====================================
+# TalkBridge Desktop Requirements - FULL COMPATIBILITY
+# =====================================================
 # 
-# Specific dependencies for the desktop application
-# based on PyQt6. Install after the base dependencies.
+# UPDATED for complete dependency compatibility with ALL features
+# Compatible with Python 3.11 for maximum compatibility
+# Includes argos-translate and all optional dependencies
 #
-# Installation:
-# pip install -r requirements-desktop.txt
+# Environment setup recommendation:
+# 1. conda env create -f config/environment-desktop.yml
+# 2. conda activate talkbridge-desktop
+# 3. pip install -r requirements-desktop.txt (if needed for additional packages)
+#
+# Alternative for pip-only environment:
+# 1. python -m venv .venv-full
+# 2. .venv-full\Scripts\activate (Windows) or source .venv-full/bin/activate (Linux/Mac)
+# 3. pip install -r requirements-desktop.txt
 
 # ==========================================
 # GRAPHICAL USER INTERFACE FRAMEWORK
 # ==========================================
 
-# PyQt6 - Main UI framework
-PyQt6>=6.5.0,<6.7.0
-
-# PyQt6 Qt6 bindings
-PyQt6-Qt6>=6.5.0,<6.7.0
-
-# PyQt6 SIP bindings
-PyQt6-sip>=13.5.0,<14.0.0
-
-# PyQt6 development tools (optional for development)
-pyqt6-tools>=6.4.2,<6.6.0
+# PySide6 - Recommended GUI framework (works in Python 3.11-3.13)
+PySide6>=6.5.0
+pyside6-tools>=6.5.0
 
 # ==========================================
-# CONFIGURATION PROCESSING
+# TEXT-TO-SPEECH (TTS)
 # ==========================================
+# REQUIRES Python <= 3.11
 
-# YAML for configuration files
-PyYAML>=6.0,<7.0
-
-# JSON schema validation (optional for config validation)
-jsonschema>=4.17.0,<5.0.0
+TTS>=0.22.0
 
 # ==========================================
-# THREADING AND CONCURRENCY
+# TRANSLATION SERVICES  
 # ==========================================
+# REQUIRES Python <= 3.11 - NOW INCLUDED!
 
-# Enhanced concurrent futures
-concurrent-futures>=3.1.1; python_version<"3.2"
-
-# Threading utilities
-threading2>=0.1.2; python_version<"3.3"
-
-# ==========================================
-# SYSTEM AND PATHS
-# ==========================================
-
-# Path manipulation utilities
-pathlib2>=2.3.7; python_version<"3.4"
-
-# Operating system utilities
-psutil>=5.9.0,<6.0.0
+argos-translate>=1.9.0
+googletrans>=4.0.0rc1
+translate>=3.6.0
 
 # ==========================================
-# LOGGING AND DEBUGGING
+# COMPUTER VISION & ANIMATION
 # ==========================================
+# REQUIRES Python <= 3.11 - NOW INCLUDED!
 
-# Advanced logging
-loguru>=0.7.0,<1.0.0
-
-# Pretty printing for debugging
-pprint2>=1.0.0
+mediapipe>=0.10.0,<1.0.0
+opencv-python>=4.8.0,<5.0.0
 
 # ==========================================
-# VALIDATION AND TYPES
+# SPEECH-TO-TEXT
 # ==========================================
 
-# Runtime type checking
-typeguard>=3.0.0,<5.0.0
-
-# Pydantic for data validation
-pydantic>=2.0.0,<3.0.0
+# OpenAI Whisper (works in all Python versions)
+openai-whisper>=20231117
 
 # ==========================================
-# TIME UTILITIES
+# AUDIO PROCESSING  
 # ==========================================
 
-# Date parsing
-python-dateutil>=2.8.0,<3.0.0
+# Main audio libraries (work in all Python versions)
+sounddevice>=0.4.5,<1.0.0
+librosa>=0.10.0,<1.0.0
+soundfile>=0.12.0,<1.0.0
+pygame>=2.5.0,<3.0.0
 
-# Timezone handling
-pytz>=2023.3
-
-# ==========================================
-# PERSISTENCE AND STORAGE
-# ==========================================
-
-# SQLite utilities (for persistent configurations)
-sqlite-utils>=3.34.0,<4.0.0
-
-# Extended pickle
-dill>=0.3.6,<1.0.0
+# Additional audio processing
+pydub>=0.25.0,<1.0.0
+webrtcvad>=2.0.0,<3.0.0
 
 # ==========================================
-# COMMUNICATION AND NETWORKING
+# MACHINE LEARNING & AI
 # ==========================================
 
-# HTTP requests for external APIs
-requests>=2.31.0,<3.0.0
-
-# WebSocket client (for service communication)
-websocket-client>=1.6.0,<2.0.0
-
-# ==========================================
-# COMPRESSION AND FILES
-# ==========================================
-
-# File compression
-zipfile2>=0.2.1
-
-# Temporary file manipulation
-tempfile2>=1.1
+# PyTorch ecosystem (works in all Python versions)
+torch>=1.12.0,<2.0.0
+torchaudio>=0.12.0,<1.0.0
+transformers>=4.20.0,<5.0.0
+sentencepiece>=0.1.96,<1.0.0
 
 # ==========================================
-# MULTIMEDIA (For audio/video preview)
+# WEB INTERFACE
 # ==========================================
 
-# Pillow for image handling
-Pillow>=9.5.0,<11.0.0
-
-# Basic audio manipulation (optional)
-pydub>=0.25.1,<1.0.0
-
-# ==========================================
-# DEVELOPMENT AND TESTING (DEV ONLY)
-# ==========================================
-
-# Testing framework
-pytest>=7.4.0,<8.0.0
-pytest-qt>=4.2.0,<5.0.0
-
-# Mocking
-pytest-mock>=3.11.0,<4.0.0
-
-# Coverage
-coverage>=7.2.0,<8.0.0
-
-# Code formatting
-black>=23.0.0,<24.0.0
-
-# Linting
-flake8>=6.0.0,<7.0.0
-
-# Type checking
-mypy>=1.5.0,<2.0.0
+# Streamlit ecosystem (works in all Python versions)
+streamlit>=1.28.0,<2.0.0
+streamlit-webrtc>=0.47.0,<1.0.0
+plotly>=5.0.0,<6.0.0
 
 # ==========================================
-# PACKAGING (OPTIONAL FOR DISTRIBUTION)
+# CORE DEPENDENCIES
 # ==========================================
 
-# PyInstaller to create executables
-PyInstaller>=5.13.0,<6.0.0
+# Scientific computing (work in all Python versions)
+numpy>=1.21.0,<2.0.0
+matplotlib>=3.5.0,<4.0.0
+scipy>=1.7.0,<2.0.0
+pandas>=1.3.0,<2.0.0
 
-# Auto-py-to-exe GUI for PyInstaller (optional)
-auto-py-to-exe>=2.34.0,<3.0.0
+# Networking & HTTP
+requests>=2.25.0,<3.0.0
+
+# Image processing
+pillow>=9.0.0,<11.0.0
+# ==========================================
+# REQUIRES Python <= 3.11
+
+mediapipe>=0.10.0,<1.0.0
+
+# OpenCV (works in all versions)
+opencv-python>=4.8.0,<5.0.0
 
 # ==========================================
-# COMPATIBILITY
+# SPEECH-TO-TEXT
 # ==========================================
 
-# Compatibility with Python 3.8+
-importlib-metadata>=6.8.0; python_version<"3.10"
-
-# Typing extensions
-typing-extensions>=4.7.0
+# OpenAI Whisper (works in all versions)
+openai-whisper>=20231117
 
 # ==========================================
-# INSTALLATION NOTES
+# AUDIO PROCESSING  
 # ==========================================
 
-# WINDOWS:
-# --------
-# On Windows, it may be necessary to install Visual C++ Redistributable
-# Download from: https://visualstudio.microsoft.com/downloads/
-# 
-# Also check that Python is in the system PATH
+# Main audio libraries (work in all versions)
+sounddevice>=0.4.5,<1.0.0
+librosa>=0.10.0,<1.0.0
+soundfile>=0.12.0,<1.0.0
+pygame>=2.5.0,<3.0.0
 
-# LINUX:
-# ------
-# On Debian/Ubuntu-based distributions:
-# sudo apt-get install python3-pyqt6 python3-pyqt6-dev
-# 
-# On Red Hat/Fedora-based distributions:
-# sudo dnf install python3-PyQt6 python3-PyQt6-devel
-
-# MACOS:
-# ------
-# PyQt6 should install correctly with pip
-# If there are issues, use homebrew:
-# brew install pyqt@6
+# Additional audio processing (optional)
+# pydub>=0.25.0,<1.0.0
+# webrtcvad>=2.0.0,<3.0.0
 
 # ==========================================
-# POST-INSTALLATION VERIFICATION
+# MACHINE LEARNING & AI
 # ==========================================
 
-# To verify that PyQt6 was installed correctly, run:
-# python -c "from PyQt6.QtWidgets import QApplication; print('PyQt6 OK')"
-#
-# To verify the rest of the dependencies:
-# python -c "import yaml, logging, pathlib; print('Basic dependencies OK')"
+# PyTorch ecosystem (works in all versions)
+torch>=1.12.0,<2.0.0
+torchaudio>=0.12.0,<1.0.0
+transformers>=4.20.0,<5.0.0
+sentencepiece>=0.1.96,<1.0.0
+
+# ==========================================
+# WEB INTERFACE
+# ==========================================
+
+# Streamlit ecosystem (works in all versions)
+streamlit>=1.28.0,<2.0.0
+streamlit-webrtc>=0.47.0,<1.0.0
+plotly>=5.0.0,<6.0.0
+
+# ==========================================
+# CORE DEPENDENCIES
+# ==========================================
+
+# Scientific computing (work in all versions)
+numpy>=1.21.0,<2.0.0
+matplotlib>=3.5.0,<4.0.0
+scipy>=1.7.0,<2.0.0
+pandas>=1.3.0,<2.0.0
+
+# Networking & HTTP
+requests>=2.25.0,<3.0.0
+
+# Image processing
+pillow>=9.0.0,<11.0.0
+
+# ==========================================
+# CONFIGURATION & SERIALIZATION
+# ==========================================
+
+# Configuration formats
+pyyaml>=6.0,<7.0
+jsonschema>=4.0.0,<5.0.0
+
+# Environment management
+python-dotenv>=0.19.0,<1.0.0
+
+# ==========================================
+# SECURITY & AUTHENTICATION
+# ==========================================
+
+cryptography>=3.4.0,<4.0.0
+bcrypt>=4.0.0,<5.0.0
+passlib>=1.7.0,<2.0.0
+
+# ==========================================
+# LOGGING & MONITORING
+# ==========================================
+
+structlog>=22.0.0,<23.0.0
+colorlog>=6.7.0,<7.0.0
+
+# ==========================================
+# UTILITIES & CLI
+# ==========================================
+
+click>=8.0.0,<9.0.0
+rich>=12.0.0,<14.0.0
+tqdm>=4.64.0,<5.0.0
+
+# ==========================================
+# DEVELOPMENT & TESTING (optional)
+# ==========================================
+
+# pytest>=7.0.0,<8.0.0
+# pytest-cov>=4.0.0,<5.0.0
+# black>=22.0.0,<24.0.0
+# isort>=5.10.0,<6.0.0
+# flake8>=5.0.0,<7.0.0
+# mypy>=1.0.0,<2.0.0
+
+# ==========================================
+# OPTIONAL INTEGRATIONS
+# ==========================================
+
+# Ollama integration
+# ollama>=0.1.0
+
+# Additional ML libraries
+# scikit-learn>=1.0.0,<2.0.0
+# tensorflow>=2.8.0,<3.0.0
