--- a/data/app_state.json
+++ b/data/app_state.json
@@ -3,15 +3,15 @@
   "services": {
     "tts": {
       "name": "tts",
-      "status": "cancelled",
-      "last_update": "2025-08-20T19:37:17.057404",
+      "status": "connected",
+      "last_update": "2025-08-21T19:06:13.800693",
       "error_message": null,
       "metadata": {}
     },
     "audio": {
       "name": "audio",
       "status": "connected",
-      "last_update": "2025-08-20T19:34:11.771680",
+      "last_update": "2025-08-21T19:06:13.801088",
       "error_message": null,
       "metadata": {}
     },
@@ -45,5 +45,5 @@
     }
   },
   "ui_preferences": {},
-  "last_save_time": "2025-08-20T19:37:17.314923"
+  "last_save_time": "2025-08-21T19:51:43.368548"
 }
