Enhance TalkBridge documentation and refactor components for improved clarity
- Updated README.md to reflect multi-interface support and added debugging instructions.
- Removed obsolete talkbridge.service file to streamline service management.
- Refactored configuration settings in config.yaml for better organization.
- Improved logging and error handling in app.log and desktop.log for enhanced debugging.
- Updated architecture and modules overview documentation to align with recent changes.
- Enhanced user authentication with secure password management in AuthManager.
- Added new features in the desktop application, including a responsive login dialog and improved UI themes.
- Implemented audio capture enhancements and integrated error handling for better user experience.

--- a/data/app_state.json
+++ b/data/app_state.json
@@ -3,15 +3,15 @@
   "services": {
     "tts": {
       "name": "tts",
-      "status": "connected",
-      "last_update": "2025-08-21T19:06:13.800693",
+      "status": "cancelled",
+      "last_update": "2025-08-28T15:48:07.614176",
       "error_message": null,
       "metadata": {}
     },
     "audio": {
       "name": "audio",
       "status": "connected",
-      "last_update": "2025-08-21T19:06:13.801088",
+      "last_update": "2025-08-28T15:46:34.384840",
       "error_message": null,
       "metadata": {}
     },
@@ -45,5 +45,5 @@
     }
   },
   "ui_preferences": {},
-  "last_save_time": "2025-08-21T19:51:43.368548"
+  "last_save_time": "2025-08-28T15:48:07.630186"
 }
