feat: Add system audio capture functionality and UI integration
- Implemented loopback audio capture support for Windows, Linux, and macOS in the AudioCapture class.
- Added UI components in ChatTab and SettingsTab for toggling system audio capture and selecting output devices.
- Enhanced logging and error handling for audio capture processes.
- Updated user interface to reflect system audio capture status and availability.
- Removed obsolete test_status_bar.py file.
- Updated user JSON data with a new last_login timestamp.

--- a/config/environment-desktop-simple.yaml
+++ b/config/environment-desktop-simple.yaml
@@ -72,6 +72,9 @@ dependencies:
     - PySide6>=6.5.0
     - pyside6-tools>=6.5.0
     
+    # Desktop GUI Framework
+    - customtkinter>=5.2.0
+    
     # Audio processing
     - sounddevice>=0.4.5
     - soundfile>=0.12.0
@@ -86,12 +89,21 @@ dependencies:
     # TTS engine
     - TTS>=0.22.0
     
+    # Alternative TTS
+    - pyttsx3>=2.90
+    
     # Whisper for STT
     - openai-whisper>=20231117
+    
+    # Alternative STT
+    - SpeechRecognition>=3.10.0
     
     # Translation services
     - argos-translate>=1.9.0
     - googletrans>=4.0.0rc1
+    
+    # Web interface enhancements
+    - streamlit-webrtc>=0.47.0
     
     # MediaPipe for face animation
     - mediapipe>=0.10.0
