--- a/config/environment-desktop.yaml
+++ b/config/environment-desktop.yaml
@@ -85,11 +85,22 @@ dependencies:
     - PySide6>=6.5.0
     - pyside6-tools>=6.5.0
     
+    # ===== DESKTOP GUI FRAMEWORK =====
+    # CustomTkinter - Required for desktop components
+    - customtkinter>=5.2.0
+    
     # ===== STT (Speech-to-Text) =====
     - openai-whisper>=20231117
     
+    # ===== ALTERNATIVE STT OPTIONS =====
+    - SpeechRecognition>=3.10.0
+    
     # ===== TTS (Text-to-Speech) - REQUIRES Python <= 3.11 =====
     - TTS>=0.22.0
+    
+    # ===== ALTERNATIVE TTS OPTIONS =====
+    - pyttsx3>=2.90
+    - elevenlabs>=0.2.0  # Optional premium TTS
     
     # ===== TRANSLATION - REQUIRES Python <= 3.11 =====
     - argos-translate>=1.9.0
@@ -101,6 +112,9 @@ dependencies:
     
     # ===== WEB INTERFACE SPECIFIC =====
     - streamlit-webrtc>=0.47.0,<1.0.0
+    
+    # ===== WEB COMMUNICATION =====
+    - websocket-client>=1.6.0
     
     # ===== ADDITIONAL SECURITY =====
     - passlib>=1.7.0,<2.0.0
