Add styles, templates, and tests for TalkBridge UI
- Created a new CSS file for styling the TalkBridge web interface, including header, chat messages, login container, buttons, and responsive design.
- Developed error and index HTML templates for displaying error messages and the main application interface.
- Implemented a test suite for hardware access functionality, including checks for required files and browser compatibility.
- Added a test suite for Whisper integration, ensuring proper installation and functionality within the TalkBridge application.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,7 +79,7 @@ web = [
 [project.scripts]
 talkbridge = "talkbridge:run_app"
 talkbridge-desktop = "talkbridge.desktop.main:main"
-talkbridge-web = "talkbridge.ui.web_server:main"
+talkbridge-web = "talkbridge.web.server:run"
 
 [project.urls]
 Homepage = "https://github.com/casavatar/talkbridge"
