feat: Add UI threading utilities for CustomTkinter applications
- Implemented thread-safe utilities for executing UI operations in CustomTkinter.
- Added functions for scheduling UI updates, safely executing functions on the UI thread, and managing UI roots.
- Introduced a notification system for event handling across different UI implementations.
- Created scripts for syntax checking, fixing unmatched parentheses, and cleaning up import hacks in the codebase.
- Added user management JSON file with roles, permissions, and security settings.

--- a/.gitignore
+++ b/.gitignore
@@ -121,9 +121,8 @@ Thumbs.db
 *.swo
 *~
 
-# Log files
+# Log files - centralized in data/logs/
 *.log
-logs/
 data/logs/
 
 # Data files - runtime data should not be committed
